--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Day to Day To-Do-List</h1>
+        <h1>Office Day to Day Task</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
