--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Node.js Web-App</title>
+        <title>Nodejs Web-App</title>
         <style>
             a {
                 text-decoration: none;
