--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,7 +5,8 @@
     <head>
         <title>Nodejs Web-App</title>
         <style>
-            a                 text-decoration: none;
+            a    {
+text-decoration: none;
                 color: black;
             }
 
